--- a/Teste/.gitignore
+++ b/Teste/.gitignore
@@ -3,3 +3,7 @@
 /GrafoTeste$TestesArestas.class
 /GrafoTeste$TestesGrafo.class
 /GrafoCompletoTeste.class
+/GrafoNaoDirecionadoTeste.class
+/GrafoDirecionadoTeste.class
+/GrafoMutavelTeste.class
+/GrafoMutavelTest.class
